# tree-sitter-gn

./: CHANGELOG.md  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: ci.yml  fuzz.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterGN/: gn.h
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
