[package]
name = "tree-sitter-gn"
description = "GN grammar for the tree-sitter parsing library"
version = "1.0.0"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "gn"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-gn"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.83"
